# `overdrive-dataplane` — userspace BPF loader per ADR-0038.
#
# Owns the `EbpfDataplane` impl of the `Dataplane` port trait from
# `overdrive-core`. The kernel object produced by `overdrive-bpf` is
# embedded at compile time via `include_bytes!` (architecture.md §3.3),
# attached to the host via aya-rs userspace API.
#
# Class `adapter-host` per ADR-0003 — same class as `overdrive-host`,
# `overdrive-store-local`, `overdrive-worker`. dst-lint scans only
# `core`-class crates and skips this one.
#
# Phase 2.1 step 01-02 ships the loader skeleton. The three
# `Dataplane` trait methods are stubbed (`Ok(())` / `Ok(vec![])`)
# with `/// see #N` doc anchors per architecture.md §7.

[package]
name         = "overdrive-dataplane"
version      = "0.0.0"
description  = "Userspace BPF loader: EbpfDataplane impl of the Dataplane port."
edition.workspace      = true
rust-version.workspace = true
license.workspace      = true
authors.workspace      = true
repository.workspace   = true
publish                = false

# Tooling binaries live under `bin/` (not `src/bin/`) per
# `.claude/rules/development.md` § "src/ is production code".
[[bin]]
name = "verifier_regress"
path = "bin/verifier_regress.rs"

[[bin]]
name = "xdp_perf"
path = "bin/xdp_perf.rs"

[package.metadata.overdrive]
crate_class = "adapter-host"

[features]
# Workspace-wide convention. Every member declares this feature so
# `cargo {check,test,mutants} --features integration-tests` resolves
# uniformly under per-package scoping. Phase 2 Tier 3 smoke for
# `EbpfDataplane` lives in `cargo xtask integration-test vm` (step
# 03-02), not in this crate's `tests/` directory — the `tests/
# integration.rs` entrypoint is the gate per `.claude/rules/testing.md`
# § Layout convention. See `.claude/rules/testing.md` § Workspace
# convention.
integration-tests = []

[dependencies]
overdrive-core.workspace = true
async-trait.workspace    = true
thiserror.workspace      = true
tokio                    = { workspace = true, features = ["macros", "rt"] }
tracing.workspace        = true

# Binary-only at the `verifier_regress` and `xdp_perf` boundaries
# per `.claude/rules/development.md` § Errors ("eyre only at CLI /
# binary boundaries"). The library modules use `thiserror`-typed
# errors; `verifier_budget` and `xdp_perf_gate` do not depend on
# these. `clap` powers the `xdp_perf` binary's CLI args.
eyre.workspace       = true
color-eyre.workspace = true
clap.workspace       = true

# `parking_lot::Mutex` for interior mutability of aya's
# `HashMap`-backed `BACKEND_MAP` handle — `Dataplane::update_service`
# is `&self` per the trait surface, but aya's `HashMap::insert /
# remove` take `&mut self`. The lock is held only for the duration
# of the BPF syscalls — never across `.await` (per
# `.claude/rules/development.md` § Concurrency).
parking_lot.workspace = true

aya.workspace  = true
libc.workspace = true
nix.workspace  = true

# transparent-mTLS proxy (ADR-0069, GH #26; OQ-2 home = this crate). The
# `HostMtlsEnforcement` adapter terminates/originates TLS 1.3 on the AGENT's leg
# using the held SVID + trust bundle read via `IdentityRead`. `rustls` drives the
# handshake and `dangerous_extract_secrets()` is the kTLS-arm seam (spike-proven);
# `rustls-pemfile` parses the held SVID/key PEM out of `SvidMaterial`. `tls12` is
# off on this surface — the proxy is TLS-1.3-only (kTLS AES-256-GCM), but the
# workspace `rustls` feature set is shared, so the default-features=false + ring
# choice is inherited. The kTLS arm itself is a raw `setsockopt` hand-roll in
# `mtls::ktls` (no `ktls` crate dep on the production path; `ktls` is dev-only for
# the test peer that decrypts).
# The workspace `rustls` is `default-features = false` (the control-plane reaches
# `ServerConnection` / `ConfigBuilder::builder` via axum-server/tokio-rustls pulling
# the `std` feature through Cargo's feature unification). This crate's graph pulls
# no such dep, so it enables `std` explicitly — `ServerConnection` /
# `ClientConnection` / `ConfigBuilder::builder` / `dangerous_extract_secrets` all
# live behind `std`.
rustls                   = { workspace = true, features = ["std"] }
rustls-pemfile.workspace = true

# `rcgen` — PRODUCTION dep for `MtlsEnforcement::probe`'s substrate self-test ONLY
# (SD-5 / D-MTLS-12, user-approved 2026-06-12). `probe()` mints an EPHEMERAL
# THROWAWAY self-signed sentinel cert+key in-process and uses it for the loopback
# kTLS-arm round-trip sentinel (`probe` postcondition (1)). The sentinel is signed
# by NEITHER CA, NEVER enters the trust bundle, NEVER reaches a real peer (loopback
# agent-to-itself only), identifies no workload, and is discarded after the
# self-test. #26 stays a READER of `IdentityRead`, NEVER an issuer — generating a
# throwaway loopback self-test cert is not "issuing an SVID"; "two distinct CAs" /
# "workload-holds-nothing" remain intact. No private key is baked into the binary.
rcgen.workspace = true

# `ipnet` — IPv4 CIDR + reserved-set types for the `allocators::VipRange`
# allocator surface (ADR-0049 / step 01-01). Pure-Rust, no I/O.
ipnet.workspace = true

# `rkyv` — versioned envelope archive for the
# `allocators::entry::ServiceVipAllocatorEntry` persistence boundary
# (ADR-0048 / step 01-03). Used in pure-Rust serialise/deserialise on
# the typed codec; no I/O.
rkyv.workspace = true

# Integration-test dev-deps. `serial_test` serialises tests that
# mutate process-global state — here, the on-disk BPF artifact path
# under `target/bpf/`. See `.claude/rules/testing.md`
# § "Tests that mutate process-global state".
#
# `tracing-subscriber` is dev-only — used by S-2.2-02 to capture the
# `xdp.attach.fallback_generic` structured warn event via a custom
# `tracing::Layer` (production code does NOT install a subscriber).
# `proptest` powers the userspace endianness round-trip in
# `crates/overdrive-dataplane/src/maps/service_map_handle.rs` per
# Phase 2.2 step 02-02 (S-2.2-04 handle endianness). Pure-function
# unit-level test, runs in the default lane.
[dev-dependencies]
proptest.workspace           = true
serial_test.workspace        = true
tracing-subscriber.workspace = true

serde_json.workspace = true

# Acceptance tests for `PersistentServiceVipAllocator` (step 01-03)
# drive a real `LocalIntentStore` over a `tempfile::TempDir` — the
# canonical Phase 1 byte-level IntentStore impl per ADR-0020.
overdrive-store-local.workspace = true
# `overdrive-testing` — shared real-infra fixtures (`NetNs`,
# `ThreeIfaceTopology`, `threeiface_ips`). Linux-only; consumed by
# `tests/integration/{reverse_nat_e2e,sanity_mixed_batch,redirect_neigh_attach}.rs`.
# See `.claude/rules/development.md` § "Shared real-infra test
# fixtures — overdrive-testing".
overdrive-testing.workspace     = true
tempfile.workspace              = true
tokio                           = { workspace = true, features = ["macros", "rt-multi-thread"] }
hex.workspace                   = true

# transparent-mTLS composed walking-skeleton Tier-3 fixtures (GH #26, step
# 01-01). The acceptance test mints a shared test PKI (`rcgen` — a CA + a server
# leaf for the inbound S + a client leaf for the outbound peer) and stands up a
# test peer that arms kTLS-RX (`ktls` + `tokio` current-thread) to decrypt the
# proxy's ciphertext and prove byte-exact plaintext. `ktls` is DEV-ONLY (the test
# peer's RX decrypt) — the production kTLS arm is the raw `setsockopt` hand-roll in
# `mtls::ktls`, not the `ktls` crate. `rcgen` is now a PRODUCTION dep (above) for
# `probe`'s throwaway self-test sentinel (SD-5 / D-MTLS-12); the test PKI consumes
# the same production `rcgen` dep — no separate dev-dep entry needed.
ktls.workspace  = true

[lints]
workspace = true
