# SCAFFOLD: true — DISTILL placeholder per DWD-06. Crafter completes in place.
#
# `overdrive-sim` hosts the Sim* adapters, the turmoil harness, and the
# invariant catalogue per ADR-0004 (single crate, not split). This file is
# the minimum needed for `tests/acceptance/*.rs` to resolve the crate;
# `[dependencies]` will grow during DELIVER to include `turmoil`, `rand`,
# `async-trait`, and the `overdrive-core` / `overdrive-store-local`
# workspace crates.

[package]
name        = "overdrive-sim"
version     = "0.0.0"
edition.workspace     = true
rust-version.workspace = true
license.workspace     = true
authors.workspace     = true
repository.workspace  = true
publish               = false

[package.metadata.overdrive]
crate_class = "adapter-sim"

[dependencies]
overdrive-core = { workspace = true }
async-trait.workspace    = true
bytes.workspace          = true
futures.workspace        = true
tokio.workspace          = true
parking_lot.workspace    = true
tokio-stream.workspace   = true
rand.workspace           = true
thiserror.workspace      = true
tempfile.workspace       = true
overdrive-store-local    = { path = "../overdrive-store-local" }
# `SimViewStore` (reconciler-memory-redb step 01-03) implements
# `overdrive_control_plane::view_store::ViewStore` and serialises `View`
# values to CBOR via `ciborium` for storage parity with the production
# `RedbViewStore`. Per ADR-0035 §3.
overdrive-control-plane.path = "../overdrive-control-plane"
ciborium.workspace       = true
serde.workspace          = true
# `overdrive-dataplane` is `adapter-host`-class (it ships the production
# `EbpfDataplane` BPF loader). The dependency here is on the pure-Rust
# `maglev::permutation::generate` function — used by the
# `MaglevDistributionEven` DST invariant in
# `src/invariants/maglev_distribution.rs`. The Linux-only `aya` /
# `libc` / `nix` machinery is gated `#[cfg(target_os = "linux")]` in the
# dataplane crate, so cross-compiling the sim crate on macOS picks up
# only the pure-function surface. Per `.claude/rules/development.md`
# § "Port-trait dependencies": the dependency consumes a pure function,
# not a port-trait production binding (no `EbpfDataplane` impl is
# instantiated by sim code). Sibling dev-dep on the same crate (used by
# `tests/integration/maglev_churn.rs`) remains for the integration
# proptest layer.
overdrive-dataplane.path = "../overdrive-dataplane"

[features]
# `integration-tests` — workspace-wide convention. Every workspace
# member declares this feature so `cargo {check,test,mutants}
# --features integration-tests` resolves uniformly under per-package
# scoping. This crate has no integration-shaped tests of its own — the
# declaration is a deliberate no-op. See `.claude/rules/testing.md`
# §"Integration vs unit gating".
integration-tests = []

[dev-dependencies]
# Crafter adds turmoil, proptest, and overdrive-store-local here during DELIVER.
tokio    = { workspace = true }
futures.workspace = true
proptest.workspace = true
serde_json.workspace = true
# `test-utils` exposes the trait-conformance harness at
# `overdrive_core::testing::observation_store::run_lww_conformance`.
# Per `docs/feature/fix-observation-lww-merge/deliver/rca.md` Cause B,
# every `ObservationStore` adapter exercises this harness from its
# own test suite to enforce the LWW contract at trait level.
overdrive-core = { workspace = true, features = ["test-utils"] }
# `overdrive-dataplane` is consumed at the regular `[dependencies]`
# level above (for the `MaglevDistributionEven` DST invariant body in
# `src/invariants/maglev_distribution.rs`); the test layer reuses the
# same pure `maglev::permutation::generate` function via the unified
# dependency graph, so no separate dev-dep entry is needed.

[lints]
workspace = true
