# SCAFFOLD: true — DISTILL placeholder per DWD-06. Crafter completes in place.
#
# `overdrive-sim` hosts the Sim* adapters, the turmoil harness, and the
# invariant catalogue per ADR-0004 (single crate, not split). This file is
# the minimum needed for `tests/acceptance/*.rs` to resolve the crate;
# `[dependencies]` will grow during DELIVER to include `turmoil`, `rand`,
# `async-trait`, and the `overdrive-core` / `overdrive-store-local`
# workspace crates.

[package]
name        = "overdrive-sim"
version     = "0.0.0"
edition.workspace     = true
rust-version.workspace = true
license.workspace     = true
authors.workspace     = true
repository.workspace  = true
publish               = false

[package.metadata.overdrive]
crate_class = "adapter-sim"

[[bin]]
# `cargo dst` runtime entry point — DST harness binary. See
# `src/bin/dst.rs` and § "xtask is build / test / dev orchestration,
# NOT a runtime entry point" in `.claude/rules/development.md`.
name = "dst"
path = "src/bin/dst.rs"

[dependencies]
overdrive-core = { workspace = true }
async-trait.workspace    = true
bytes.workspace          = true
futures.workspace        = true
tokio.workspace          = true
parking_lot.workspace    = true
tokio-stream.workspace   = true
rand.workspace           = true
thiserror.workspace      = true
tempfile.workspace       = true
overdrive-store-local    = { path = "../overdrive-store-local" }
# `SimViewStore` (reconciler-memory-redb step 01-03) implements
# `overdrive_control_plane::view_store::ViewStore` and serialises `View`
# values to CBOR via `ciborium` for storage parity with the production
# `RedbViewStore`. Per ADR-0035 §3.
overdrive-control-plane.path = "../overdrive-control-plane"
ciborium.workspace       = true
serde.workspace          = true
serde_json.workspace     = true
# Used by the `ExitEventObservableOutcome` invariant evaluator
# (fix-exit-observer-running-gate step 01-05 — Solution 4) to
# archive a `Job` aggregate into the in-process `LocalIntentStore`
# fixture so the production `JobLifecycle` reconciler resolves it
# through `IntentStore::get`. Mirrors the integration test fixture at
# `crates/overdrive-control-plane/tests/integration/job_lifecycle/
# exit_observer_running_gate.rs`.
rkyv.workspace               = true
# `cargo dst` binary deps — the `[[bin]] name = "dst"` entry below
# ships the DST harness as a runtime tool. See § "xtask is build /
# test / dev orchestration, NOT a runtime entry point" in
# `.claude/rules/development.md` for the layering rationale.
clap.workspace           = true
eyre.workspace           = true
color-eyre.workspace     = true

[features]
# `integration-tests` — workspace-wide convention. Every workspace
# member declares this feature so `cargo {check,test,mutants}
# --features integration-tests` resolves uniformly under per-package
# scoping. Gates the real-crypto `sim_ca_fixture_cert_key_match`
# integration scenario (parses the `SimCa` fixture key/cert bytes via
# `rcgen` / `x509-parser`) out of the default unit lane. See
# `.claude/rules/testing.md` §"Integration vs unit gating".
integration-tests = []

[dev-dependencies]
# Crafter adds turmoil, proptest, and overdrive-store-local here during DELIVER.
tokio    = { workspace = true }
futures.workspace = true
proptest.workspace = true
# `test-utils` exposes the trait-conformance harness at
# `overdrive_core::testing::observation_store::run_lww_conformance`.
# Per `docs/feature/fix-observation-lww-merge/deliver/rca.md` Cause B,
# every `ObservationStore` adapter exercises this harness from its
# own test suite to enforce the LWW contract at trait level.
overdrive-core = { workspace = true, features = ["test-utils"] }
# Dev-dep ONLY — the `sim_ca_fixture_cert_key_match` integration test parses
# the `SimCa` fixture leaf key/cert bytes to prove cert↔key correspondence
# (mirrors the host adapter's `rcgen_svid_returns_matching_leaf_private_key`
# proof, ported to the sim consts). `overdrive-sim` MUST NOT gain these in
# `[dependencies]` — the sim treats fixture material as opaque bytes and never
# parses real crypto on its production path (the dst-lint discipline applies to
# `[dependencies]`, not the test-only graph). Gated behind `integration-tests`.
rcgen.workspace        = true
x509-parser.workspace  = true

[lints]
workspace = true
