# `overdrive-store-local` hosts the real redb-backed `LocalStore` adapter
# (per the architecture brief §3 crate topology and the US-03 reuse
# table row 20).

[package]
name        = "overdrive-store-local"
version     = "0.0.0"
edition.workspace     = true
rust-version.workspace = true
license.workspace     = true
authors.workspace     = true
repository.workspace  = true
publish               = false

[package.metadata.overdrive]
crate_class = "adapter-real"

[dependencies]
overdrive-core.workspace = true
redb.workspace           = true
async-trait.workspace    = true
bytes.workspace          = true
futures.workspace        = true
rkyv.workspace           = true
thiserror.workspace      = true
tokio.workspace          = true
tokio-stream.workspace   = true

[dev-dependencies]
tempfile.workspace = true
tokio              = { workspace = true }
proptest.workspace = true

[lints]
workspace = true
