# `overdrive-store-local` hosts the real redb-backed `LocalStore` adapter
# (per the architecture brief §3 crate topology and the US-03 reuse
# table row 20).

[package]
name        = "overdrive-store-local"
version     = "0.0.0"
edition.workspace     = true
rust-version.workspace = true
license.workspace     = true
authors.workspace     = true
repository.workspace  = true
publish               = false

[package.metadata.overdrive]
crate_class = "adapter-host"

[features]
# Opt-in gate for slow integration-shaped tests in this crate. The
# snapshot-roundtrip proptest (`tests/snapshot_proptest.rs`) drives 1024
# real redb open/put/export cycles per case and routinely exceeds the
# 60-second nextest slow-test budget on developer hardware. Off by
# default so `cargo nextest run --workspace` stays under the budget;
# enable with `--features overdrive-store-local/integration-tests` (CI
# does this in the dedicated slow lane). Mirrors the same gate shape
# used in `xtask/Cargo.toml`.
integration-tests = []

[dependencies]
overdrive-core.workspace = true
redb.workspace           = true
async-trait.workspace    = true
bytes.workspace          = true
futures.workspace        = true
rkyv.workspace           = true
thiserror.workspace      = true
tokio.workspace          = true
tokio-stream.workspace   = true
tracing.workspace        = true

[dev-dependencies]
tempfile.workspace = true
tokio              = { workspace = true }
proptest.workspace = true
tracing.workspace  = true
tracing-subscriber.workspace = true
# `test-utils` exposes the trait-conformance harness at
# `overdrive_core::testing::observation_store::run_lww_conformance`.
# Per `docs/feature/fix-observation-lww-merge/deliver/rca.md` Cause B,
# every `ObservationStore` adapter exercises this harness from its
# own test suite to enforce the LWW contract at trait level.
overdrive-core = { workspace = true, features = ["test-utils"] }
# `trybuild` powers the compile-fail fixtures under `tests/compile_fail/`
# that prove Layer 1 of ADR-0048 § 2 — the codec-internal envelope
# enums are `pub` but NOT re-exported from `overdrive-core::lib.rs`,
# so cross-crate code referencing them by short path fails to compile
# with rustc E0432. Pinned exactly via workspace per
# `.claude/rules/testing.md` § "Compile-fail testing (trybuild)" —
# stderr is sensitive to both rustc and trybuild itself.
trybuild.workspace = true

[lints]
workspace = true
