# `overdrive-worker` — worker subsystem per ADR-0029. Hosts
# `ExecDriver`, workload-cgroup management, and the `node_health`
# row writer at startup. Class `adapter-host`.

[package]
name         = "overdrive-worker"
version      = "0.0.0"
description  = "Worker subsystem: ExecDriver + workload-cgroup management + node_health writer."
edition.workspace      = true
rust-version.workspace = true
license.workspace      = true
authors.workspace      = true
repository.workspace   = true
publish                = false

[package.metadata.overdrive]
crate_class = "adapter-host"

[features]
# Workspace-wide convention. Every member declares this feature so
# `cargo {check,test,mutants} --features integration-tests` resolves
# uniformly under per-package scoping. Slice 2's real-process /
# real-cgroup tests live behind this gate. See
# `.claude/rules/testing.md` § Workspace convention.
integration-tests = []

[dependencies]
overdrive-core.workspace = true
async-trait.workspace    = true
hostname.workspace       = true
parking_lot.workspace    = true
rkyv.workspace           = true
serde.workspace          = true
thiserror.workspace      = true
tokio.workspace          = true
tracing.workspace        = true

libc = { workspace = true }
# `nix` — safe Rust bindings to *nix syscalls. Used by `ExecDriver`'s
# opt-in `netns_path` builder to call `setns(CLONE_NEWNET)` in the
# `pre_exec` hook so the spawned child enters a caller-managed
# network namespace before `execve`. Mirrors the CNI spec model
# (`CNI_NETNS`) applied to native processes. Workspace-pinned with
# the `sched` feature per `.claude/rules/development.md`
# § Dependencies.
nix.workspace = true

# `hyper` + `hyper-util` + `http-body-util` + `tokio-util` — required
# by the service-health-check probes Phase 1 implementation per
# ADR-0054 §3 (production `HyperHttpProber` binding uses `hyper-util`'s
# legacy `Client` + `hyper::Request` + `http_body_util::Empty` request
# body + tokio timeouts). `hyper-util` + `tokio-util` were wired at
# 01-01; `hyper` + `http-body-util` land here at 02-01 alongside the
# HTTP-prober body. All pure-Rust HTTP/IO utilities with no build.rs
# surface; MIT-licensed (verified).
hyper.workspace = true
hyper-util.workspace = true
http-body-util.workspace = true
tokio-util.workspace = true

[dev-dependencies]
overdrive-sim.path  = "../overdrive-sim"
# `overdrive-host` — production adapter crate (`adapter-host`). Used
# by the Tier 3 integration suite under
# `tests/integration/real_cgroup_fs/` (step 01-02 of the cgroup-fs-port
# migration) to exercise `RealCgroupFs::probe()` against real
# `/sys/fs/cgroup` and against a tempdir-scoped probe root. Dev-dep
# only — production composition of `RealCgroupFs` into the worker
# subsystem happens at the binary boundary (`overdrive-cli`'s `serve`
# subcommand, per ADR-0054 § Composition root wiring); the worker
# crate itself does NOT name the concrete production binding.
overdrive-host.path = "../overdrive-host"
proptest.workspace  = true
tempfile.workspace  = true
serial_test.workspace = true
tracing-subscriber.workspace = true
# `trybuild` — compile-fail fixture harness per ADR-0054 § migration
# step 01-01. Used to pin the post-01-05 `ExecDriver::new` arity at
# compile time (a constructor missing the mandatory
# `fs: Arc<dyn CgroupFs>` parameter must fail to compile, not at
# runtime). The fixture itself lands as a RED scaffold at 01-01 and
# goes GREEN at 01-05 when the arity change ships. Workspace-pinned
# at `=1.0.101` per `.claude/rules/testing.md` § "Compile-fail testing
# (trybuild)" — pin exactly to keep `.stderr` fixtures stable across
# rustc upgrades.
trybuild.workspace  = true

[lints]
workspace = true
